# lf-exa-icons

./: .gitattributes  .gitignore  README.md  flake.nix  helper.py  lf_exa_icons.py  parse_test.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  python-app.yml  test.yml  test_release.yaml
lf_exa_icons/: __init__.py  main.py
scripts/: build_library.py  install.sh  release.sh
tests/: __init__.py  versions_test.py
