[tool.poetry]
name = "lf_exa_icons"
version = "0.1.0"
description = ""
authors = ["Matthew Toohey <contact@mtoohey.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tree-sitter = "^0.20.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lf-exa-icons = "lf_exa_icons:main"
